feat: fix sonarcloud issues